# asst0_environment

./: .gitignore  CMakeLists.txt  README.md
CMU462/: CMakeLists.txt
cmake/: Dependencies.cmake  DownloadExternal.cmake
cmake/modules/: Dependencies.cmake
shader/: basic.frag
src/: CMakeLists.txt  main.cpp  shader.h
src/shader/: basic.vs
